fixing mobile scroll bug that froze isMoving on the last scene, changed arrow placement on mobile, added some comments

--- a/abortion-make-america-what-again/styles.css
+++ b/abortion-make-america-what-again/styles.css
@@ -412,7 +412,7 @@ section.overlay#share .share-block .btn-group button {
     text-align: center;
   }
   .scroll-arrow {
-    bottom: 10vh;
+    bottom: 25vh;
   }
   .scroll-arrow svg {
     height: 100px;
